--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ title                    : "Edwar Rodriguez / Sitio Web Personal"
 title_separator          : "-"
 name                     : &name "Edwar Rodriguez"
 description              : &description "Java/.NET Developer"
-url                      : https://edwarod.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://edwarod.github.io/edwar.rodriguez.pineros.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "edwar.rodriguez.pineros.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : false
+future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
