--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/edwar-arturo-rodr%C3%ADguez-pi%C3%B1eros-26015813b/"
+  linkedin         : "https://linkedin.com/in/edwar-arturo-rodríguez-piñeros-26015813b"
   orcid            : 
   pinterest        :
   soundcloud       :
