--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ author:
   facebook         :
   foursquare       :
   github           : "edwarod"
+  gitlab           : "edwar.rodriguez.pineros"
   google_plus      :
   keybase          :
   instagram        :
